--- a/templates/deals/deal_create.html
+++ b/templates/deals/deal_create.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <div class="card bg-light">
-        <article class="card-body mx-auto" style="max-width: 800px;">
+        <article class="card-body mx-auto">
             <h4 class="card-title mt-3 text-center">Dodaj nową okazję</h4>
             <form class="create_deal" method="POST" enctype="multipart/form-data" onsubmit=alter()>
                 {% csrf_token %}
