--- a/templates/account/profile_detail.html
+++ b/templates/account/profile_detail.html
@@ -4,31 +4,31 @@
 
 
 
-	<div class="card bg-light">
-		<div class="media">
-			{% if profile.avatar %}
+    <div class="card bg-light">
+        <div class="media">
+            {% if profile.avatar %}
 
-				<img src="{{ profile.avatar.url }}" class="align-self-md-center align mr-3 ml-3" alt="..."
-				     style="max-height: 200px">
-			{% endif %}
+                <img src="{{ profile.avatar.url }}" class="align-self-md-center align me-3 ms-3" alt="..."
+                     style="max-height: 200px">
+            {% endif %}
 
-			<div class="media-body ml-2">
-				<h1 class="mt-0 text-center">{{ profile.username|lower|title }}</h1>
+            <div class="media-body ms-2">
+                <h1 class="mt-0 text-center">{{ profile.username|lower|title }}</h1>
 
-				<dl class="row">
-					<dt class="col-sm-2">Name</dt>
-					<dd class="col-sm-10">{{ profile.first_name }}</dd>
+                <dl class="row">
+                    <dt class="col-sm-2">Name</dt>
+                    <dd class="col-sm-10">{{ profile.first_name }}</dd>
 
-					<dt class="col-sm-2">Surname</dt>
-					<dd class="col-sm-10"> {{ profile.last_name }} </dd>
+                    <dt class="col-sm-2">Surname</dt>
+                    <dd class="col-sm-10"> {{ profile.last_name }} </dd>
 
-					<dt class="col-sm-2">Published</dt>
-					<dd class="col-sm-10"> {{ deals.count }} </dd>
+                    <dt class="col-sm-2">Published</dt>
+                    <dd class="col-sm-10"> {{ deals.count }} </dd>
 
-					<dt class="col-sm-2">Comments:</dt>
-					<dd class="col-sm-10"> {{ comments.count }} </dd>
+                    <dt class="col-sm-2">Comments:</dt>
+                    <dd class="col-sm-10"> {{ comments.count }} </dd>
 
-				</dl>
+                </dl>
 			</div>
 		</div>
 
