--- a/templates/brands/brand_list.html
+++ b/templates/brands/brand_list.html
@@ -1,30 +1,51 @@
 {% extends '_base.html' %}
 
 {% block content %}
-	<div class="container">
-		{% for brand in brands %}
-			{% if forloop.first or forloop.counter0|divisibleby:4 %}
-				<div class="card-deck mb-3 text-center">
-			{% endif %}
+    <div class="container my-5">
+        <div class="tab-content px-0 pt-5">
+            <div class="tab-pane active" id="id_form-2" role="tabpanel">
+                <div class="row row-cols-1 row-cols-md-3">
+                    {% for brand in brands %}
+                        <div class="col mb-4">
+                            <div class="card card-cascade wider">
+                                <div class="view view-cascade overlay">
+                                    <img
+                                            class="card-img-top"
+                                            src="https://mdbootstrap.com/img/Photos/Others/photo6.jpg"
+                                            {#                                            src="{{ brand.logo.url }}" #}
+                                            alt="{{ brand.brand }}"
+                                    />
+                                    <a>
 
-		<div class="card box-shadow">
-			<img class="card-img-top" src="{{ brand.logo.url }}" alt="{{ brand.brand }}"
-			     style="width: 100%; height: 5vw; object-fit: cover;">
-			<div class="card-body d-flex flex-column pt-1">
-				<ul class="list-unstyled text-left">
-					<li>Produktów: {{ brand.product_set.count }}</li>
-					<li>Okazji: x/y</li>
-				</ul>
-				<a class="mt-auto btn btn btn-danger"
-				   href="{% url 'products:brand_detail' brand.slug %}">{{ brand.brand }}</a>
-			</div>
-		</div>
+                                    </a>
+                                </div>
 
-		{% if forloop.counter|divisibleby:4 or forloop.last %}
-			</div>
-		{% endif %}
-		{% endfor %}
+                                <div class="card-body card-body-cascade text-center">
 
-		{% include "_pagination.html" %}
-	</div>
+                                    <h4 class="card-title">
+                                        <strong>
+                                            <a href="{% url 'products:brand_detail' brand.slug %}">
+                                                {{ brand.brand }}</a>
+                                        </strong>
+                                    </h4>
+                                    <p class="card-text">{{ brand.description|truncatechars:100 }}</p>
+                                    <ul class="list-unstyled text-left">
+                                        <li>Produktów: {{ brand.product_set.count }}</li>
+                                        <li>Okazji: x/y</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+                    {% endfor %}
+
+
+                </div>
+            </div>
+        </div>
+        <!-- Tab panels -->
+
+    </div>
+    {% include "_pagination.html" %}
+    <!-- Section: Block Category -->
 {% endblock %}
