--- a/templates/deals/comment_create.html
+++ b/templates/deals/comment_create.html
@@ -1,30 +1,30 @@
 {% block content %}
-	{% if user.is_authenticated %}
-		<form method="post">
-			{% csrf_token %}
+    {% if user.is_authenticated %}
+        <form method="post">
+            {% csrf_token %}
 
-			<div class="d-flex flex-row add-comment-section mt-4 mb-4">
-				<a href="{% url 'accounts:profile' user.username %}">
-					{% if user.avatar %}
-						<img class="rounded-circle z-depth-2 circle-avatar mr-2" alt="{{ user.username }} avatar"
-						     src="{{ user.avatar.url }}" data-holder-rendered="true" style="width:38px; height:38px">
+            <div class="d-flex flex-row add-comment-section mt-4 mb-4">
+                <a href="{% url 'accounts:profile' user.username %}">
+                    {% if user.avatar %}
+                        <img class="rounded-circle z-depth-2 circle-avatar me-2" alt="{{ user.username }} avatar"
+                             src="{{ user.avatar.url }}" data-holder-rendered="true" style="width:38px; height:38px">
 
-					{% else %}
-						<div class="circle rounded-circle z-depth-2 circle-avatar mr-2" style="width:38px; height:38px">
+                    {% else %}
+                        <div class="circle rounded-circle z-depth-2 circle-avatar me-2" style="width:38px; height:38px">
 						<span class="initials" role="button" data-toggle="dropdown" aria-haspopup="true"
-						      aria-expanded="false">{{ user.get_initials }}</span>
+                              aria-expanded="false">{{ user.get_initials }}</span>
 
-						</div>
-					{% endif %}
+                        </div>
+                    {% endif %}
 
-				</a>
+                </a>
 
-				{{ form.comment }}
+                {{ form.comment }}
 
-				<button class="btn btn-primary" type="submit">Comment</button>
-			</div>
-		</form>
-	{% endif %}
+                <button class="btn btn-primary" type="submit">Comment</button>
+            </div>
+        </form>
+    {% endif %}
 
 {% endblock content %}
 
