--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,92 +1,149 @@
-<footer class="text-center text-lg-start bg-dark text-muted mt-5">
-	<section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-		<div class="me-5 d-none d-lg-block">
-			<span></span>
-		</div>
-		<div>
-			<a href="" class="me-4 text-reset">
-				<i class="bi bi-facebook" aria-hidden="true"></i>
-			</a>
-			<a href="" class="me-4 text-reset">
-				<i class="bi bi-twitter" aria-hidden="true"></i>
-			</a>
-			<a href="" class="me-4 text-reset">
-				<i class="bi bi-google" aria-hidden="true"></i>
-			</a>
-			<a href="" class="me-4 text-reset">
-				<i class="bi bi-instagram" aria-hidden="true"></i>
-			</a>
-			<a href="" class="me-4 text-reset">
-				<i class="bi bi-linkedin" aria-hidden="true"></i>
-			</a>
-			<a href="" class="me-4 text-reset">
-				<i class="bi bi-github" aria-hidden="true"></i>
-			</a>
-		</div>
-	</section>
+<!-- Footer -->
+<footer class=" text-center text-lg-start text-white" style="background-color:#123114;">
+    <!-- Grid container -->
+    <div class="container p-4">
 
-	<section class="">
-		<div class="container text-center text-md-start mt-5">
-			<div class="row mt-3">
-				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-					<h6 class="text-uppercase fw-bold mb-4">
-						<i class="bi bi-gem me-3" aria-hidden="true"></i> Company name <i class="bi bi-gem me-3" aria-hidden="true"></i>
-					</h6>
-					<p>
-						Lorem ipsum...
-					</p>
-				</div>
-				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-					<h6 class="text-uppercase fw-bold mb-4">
-						Groups
-					</h6>
-					<p>
-						<a href="#" class="text-reset">Angular</a>
-					</p>
-					<p>
-						<a href="#" class="text-reset">React</a>
-					</p>
-					<p>
-						<a href="#" class="text-reset">Vue</a>
-					</p>
-					<p>
-						<a href="#" class="text-reset">Laravel</a>
-					</p>
-				</div>
-				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-					<h6 class="text-uppercase fw-bold mb-4">
-						Useful links
-					</h6>
-					<p>
-						<a href="#" class="text-reset">Pricing</a>
-					</p>
-					<p>
-						<a href="#" class="text-reset">Settings</a>
-					</p>
-					<p>
-                        <a href="#" class="text-reset">Orders</a>
-                    </p>
-                    <p>
-                        <a href="#" class="text-reset">Help</a>
-                    </p>
+        <!-- Section: Social media -->
+        <section class="mb-4">
+            <!-- Facebook -->
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i
+                    class="fab fa-facebook-f" aria-hidden="true"></i></a>
+
+            <!-- Twitter -->
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i
+                    class="fab fa-twitter" aria-hidden="true"></i></a>
+
+            <!-- Google -->
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i
+                    class="fab fa-google" aria-hidden="true"></i></a>
+
+            <!-- Instagram -->
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i
+                    class="fab fa-instagram" aria-hidden="true"></i></a>
+
+            <!-- Linkedin -->
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i
+                    class="fab fa-linkedin-in" aria-hidden="true"></i></a>
+            <!-- Github -->
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i
+                    class="fab fa-github" aria-hidden="true"></i></a>
+        </section>
+        <!-- Section: Social media -->
+
+
+        <!-- Section: Text -->
+        <section class="mb-4">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+                distinctio earum repellat quaerat voluptatibus placeat nam,
+                commodi optio pariatur est quia magnam eum harum corrupti dicta,
+                aliquam sequi voluptate quas.
+            </p>
+        </section>
+        <!-- Section: Text -->
+
+
+        <!-- Section: Links -->
+        <section class="">
+            <!--Grid row-->
+            <div class="row">
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#!" class="text-white">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 4</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Contact
-                    </h6>
-                    <p><i class="fas fa-home me-3" aria-hidden="True"></i> New York, NY 10012, US</p>
-                    <p>
-                        <i class="fas fa-envelope me-3" aria-hidden="True"></i>
-                        info@example.com
-                    </p>
-                    <p><i class="fas fa-phone me-3" aria-hidden="True"></i> + 01 234 567 88</p>
-                    <p><i class="fas fa-print me-3" aria-hidden="True"></i> + 01 234 567 89</p>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#!" class="text-white">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 4</a>
+                        </li>
+                    </ul>
                 </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#!" class="text-white">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 4</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#!" class="text-white">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Link 4</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
             </div>
-        </div>
-    </section>
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2021 Copyright:
-        <a class="text-reset fw-bold" href="#">Invisible company</a>
+            <!--Grid row-->
+        </section>
+        <!-- Section: Links -->
+
     </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+        © 2021 Copyright:
+        <a class="text-white" href="#">Stract.pl</a>
+    </div>
+    <!-- Copyright -->
+
 </footer>
+<!-- Footer -->
