--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,66 +1,94 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="{% url 'deals:list' %}">Deals</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-	        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color:#2E7D32;">
+    <div class="container-fluid">
+        <a class="navbar-brand mb-0 h1" href="{% url 'deals:list' %}">STRACT</a>
+        <button
+                class="navbar-toggler"
+                type="button"
+                data-mdb-toggle="collapse"
+                data-mdb-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+        >
+            <i class="fas fa-bars" aria-hidden="true"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{% url 'deals:hot_list' %}">Best</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'products:brands' %}">Marki</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'products:products' %}">Produkty</a>
+                </li>
 
-	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
-				<a class="nav-link" href="{% url 'deals:hot_list' %}">HOT</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'products:brands' %}">Marki</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'products:products' %}">Produkty</a>
-			</li>
-		</ul>
-		<form class="form-inline my-2 my-lg-0 mr-2" action="{% url 'deals:list' %}">
-			<input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search">
-			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-				<i class="bi bi-search" aria-hidden="true"></i>
-			</button>
-		</form>
+            </ul>
+            <form class="d-flex input-group w-auto me-2" action="{% url 'deals:list' %}">
+                <input
+                        name="q"
+                        type="search"
+                        class="form-control rounded"
+                        placeholder="Szukaj"
+                        aria-label="Szukaj"
+                />
+            </form>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+                <li class="nav-item me-2">
+                    <a class="btn btn-warning" href="{% url 'deals:new' %}">New Deal</a>
+                </li>
+            </ul>
+            {% if user.is_authenticated %}
+                <ul class="navbar-nav">
 
-		<ul class="form-inline my-2 my-lg-0 navbar-nav">
-			<li class="nav-item mr-2">
-				<a class="btn btn-warning" href="{% url 'deals:new' %}">New Deal</a>
-			</li>
-			{% if user.is_authenticated %}
-				<div class="circle dropleft">
-					{% if user.avatar %}
-						<span role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <!-- Avatar -->
+                    <li class="nav-item dropstart">
+                        <a
+                                class="nav-link dropdown-toggle d-flex align-items-center"
+                                href="#"
+                                id="navbarDropdownMenuLink"
+                                role="button"
+                                data-mdb-toggle="dropdown"
+                                aria-expanded="false"
+                        >
+                            {% if user.avatar %}
+                                <img
+                                        src="{{ user.avatar.url }}"
+                                        class="rounded-circle"
+                                        height="22"
+                                        alt="{{ user }}"
+                                        loading="lazy"
+                                />
+                            {% else %}
+                                <span>{{ user.get_initials }}</span>
+                            {% endif %}
 
-						<img class="rounded-circle circle-avatar" alt="{{ user.username }} avatar"
-						     src="{{ user.avatar.url }}" data-holder-rendered="true">
-						</span>
-					{% else %}
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li>
+                                <a class="dropdown-item" href="{% url 'accounts:profile' user.username %}">
+                                    {{ user.username }}
+                                </a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider" />
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'deals:user_deals' user.username %}">
+                                    Opublikowane
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'account_logout' %}">Wyloguj</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            {% else %}
+                <a class="btn btn-warning" href="{% url 'account_login' %}">Login / Register</a>
+            {% endif %}
 
-						<span class="initials" role="button" data-toggle="dropdown" aria-haspopup="true"
-						      aria-expanded="false">{{ user.get_initials }}</span>
-						</span>
-					{% endif %}
-					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-						<a class="dropdown-item"
-						   href="{% url 'accounts:profile' user.username %}">{{ user.username }}</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="{% url 'deals:user_deals' user.username %}">Published</a>
-						<a class="dropdown-item" href="#">Saved</a>
-						<a class="dropdown-item" href="#">Alerts</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a>
-					</div>
-				</div>
-
-
-			{% else %}
-				<li class="nav-item mr-2">
-					<a class="btn btn-secondary " href="{% url 'account_login' %}">Login / Register</a>
-				</li>
-			{% endif %}
-
-		</ul>
-	</div>
+        </div>
+    </div>
 </nav>
